# convert_audio_tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/: convert_audio_tool.py
src/convert_audio_tool/: __init__.py  cli.py  core.py
tests/: test_cli_parse.py  test_convert_media.py  test_imports.py  test_iter_media_files.py
