[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convert-audio-tool"
version = "0.2.1"
description = "Simple CLI tool to batch-convert audio and video using ffmpeg."
authors = [
    { name = "Petr Němec" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "tqdm",
]

[project.scripts]
convert-audio = "convert_audio_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
